# edgesentry-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  TODO.md  deny.toml  docker-compose.local.yml  mkdocs.yml
crates/audit-cli/: Cargo.toml
crates/audit-cli/examples/: lift_inspection_flow.rs
crates/audit-cli/src/: agent.rs  chain.rs  crypto.rs  lib.rs  main.rs
crates/audit-cli/src/ingest/: verify.rs
crates/audit-cli/tests/: core_tests.rs  signing_tests.rs  storage_tests.rs  verify_tests.rs
crates/edgesentry-assess/: Cargo.toml
crates/edgesentry-assess/src/: lib.rs
crates/edgesentry-audit/: Cargo.toml
crates/edgesentry-audit/examples/: cloud_backend.rs  edge_device.rs  edge_gateway.rs  lift_inspection_flow.rs
crates/edgesentry-audit/fixtures/clearance/: vessel-hold_evaluation_manifest.json
crates/edgesentry-audit/src/: agent.rs  clearance.rs  identity.rs  lib.rs  main.rs  record.rs  update.rs
crates/edgesentry-audit/src/ingest/: mod.rs  network_policy.rs  storage.rs  verify.rs
crates/edgesentry-audit/src/transport/: mod.rs  mqtt.rs  tls.rs
crates/edgesentry-audit/tests/: cli_integration.rs  integration.rs  unit.rs
crates/edgesentry-audit/tests/integration/: async_ingest_integration.rs  buffer_integration.rs  http_integration.rs  mqtt_integration.rs  postgres_integration.rs  s3_integration.rs  tls_integration.rs  update_integration.rs
crates/edgesentry-audit/tests/unit/: clearance_tests.rs  core_tests.rs  network_policy_tests.rs  signing_tests.rs  storage_tests.rs  update_tests.rs  verify_tests.rs
crates/edgesentry-bridge/: Cargo.toml  build.rs  cbindgen.toml
crates/edgesentry-bridge/examples/c_integration/: Makefile  main.c
crates/edgesentry-bridge/include/: edgesentry_bridge.h
crates/edgesentry-bridge/src/: lib.rs
crates/edgesentry-bridge/tests/: ffi.rs
crates/edgesentry-compute/: Cargo.toml
crates/edgesentry-compute/src/: confidence.rs  geo.rs  lib.rs  physics.rs
crates/edgesentry-document/: Cargo.toml
crates/edgesentry-document/fixtures/: bca_outlet_B001_compliant.csv  bca_outlet_B002_missing_eui.csv  voyage_V001_compliant.csv  voyage_V002_bwm_expired.csv  voyage_V003_low_confidence.csv
crates/edgesentry-document/fixtures/clearance/: vessel-clean_facts.json  vessel-hold_facts.json
crates/edgesentry-document/src/: clearance.rs  lib.rs
crates/edgesentry-document/templates/: fal-form-1.html  fal-form-5.html  port-cyber-clearance.html  sg-bca-greenmark.html  sg-port-entry.html
crates/edgesentry-evaluate/: Cargo.toml
crates/edgesentry-evaluate/src/: rules.rs
crates/edgesentry-explain/: Cargo.toml
crates/edgesentry-explain/src/: explainer.rs  kb.rs  lib.rs  llm.rs
crates/edgesentry-image-utils/: Cargo.toml
crates/edgesentry-image-utils/src/: lib.rs
crates/edgesentry-ingest/: Cargo.toml
crates/edgesentry-ingest/fixtures/: ais_maritime_approach.csv  forklift_approach.csv  sg_maritime_ais.nmea  vessel_zone_approach.csv
crates/edgesentry-ingest/src/: ais_nmea.rs  csv_replay.rs  entity.rs  jsonl.rs  lib.rs  udp.rs
crates/edgesentry-inspect/: Cargo.toml  config.example.toml
crates/edgesentry-inspect/examples/: ifc_deviation_heatmap.rs  m2_m3_demo.rs
crates/edgesentry-inspect/src/: config.rs  deviation.rs  fixtures.rs  heatmap.rs  ifc.rs  inference.rs  lib.rs  main.rs  mesh.rs  pipeline.rs  ply.rs  points.rs  report.rs
crates/edgesentry-inspect/src/ingress/: mock.rs  mod.rs
crates/edgesentry-inspect/tests/: deviation_integration.rs  fixtures_integration.rs  heatmap_integration.rs  scan_pipeline_integration.rs
crates/edgesentry-inspect/tests/fixtures/: prototype_detector.onnx  sample.ifc
crates/edgesentry-parse/: Cargo.toml
crates/edgesentry-parse/fixtures/: sample_document.json
crates/edgesentry-parse/src/: lib.rs
crates/edgesentry-profile/: Cargo.toml
crates/edgesentry-profile/fixtures/demo/: rules.json
crates/edgesentry-profile/fixtures/maritime-zone-test/: rules.json
crates/edgesentry-profile/fixtures/sg-bca-greenmark/: rules.json
crates/edgesentry-profile/fixtures/sg-maritime-security/: params.toml  rules.json
crates/edgesentry-profile/fixtures/sg-port-compliance/: rules.json
crates/edgesentry-profile/fixtures/zone-test/: rules.json
crates/edgesentry-profile/src/: lib.rs
crates/edgesentry-report/: Cargo.toml
crates/edgesentry-report/examples/: safety_report.template
crates/edgesentry-report/src/: lib.rs
crates/edgesentry-rs/: Cargo.toml
crates/edgesentry-rs/examples/: cloud_backend.rs  edge_device.rs  edge_gateway.rs  lift_inspection_flow.rs
crates/edgesentry-rs/src/: agent.rs  integrity.rs  lib.rs  main.rs  record.rs  update.rs
crates/edgesentry-rs/src/buffer/: mod.rs
crates/edgesentry-rs/src/ingest/: mod.rs  network_policy.rs  policy.rs  storage.rs  verify.rs
crates/edgesentry-rs/tests/: cli_integration.rs  core_tests.rs  integration.rs  s3_integration.rs  signing_tests.rs  storage_tests.rs  unit.rs  verify_tests.rs
crates/edgesentry-scenario/: Cargo.toml
crates/edgesentry-scenario/fixtures/: simple_crossing.csv
crates/edgesentry-scenario/src/: lib.rs
crates/edgesentry-store/: Cargo.toml
crates/edgesentry-store/src/: lib.rs
crates/edgesentry-types/: Cargo.toml
crates/edgesentry-types/src/: lib.rs
crates/edgesentry-wasm/: Cargo.toml  README.md
crates/edgesentry-wasm/src/: lib.rs
crates/edgesentry-zkp/: Cargo.toml
crates/edgesentry-zkp/src/: error.rs  lib.rs  program.rs  proof.rs  tests.rs
crates/eds/: Cargo.toml
crates/eds/src/: assess.rs  audit.rs  compute.rs  document.rs  evaluate.rs  explain.rs  ingest.rs  ingest_stream.rs  inspect.rs  main.rs  parse.rs  profile.rs  report.rs  scenario.rs
crates/eds/tests/: cli_integration.rs
crates/ingest-api/: Cargo.toml
crates/ingest-api/examples/: lift_inspection_flow.rs
crates/ingest-api/src/: lib.rs  storage.rs  verify.rs
crates/ingest-api/tests/: storage_tests.rs  verify_tests.rs
crates/ledger-core/: Cargo.toml
crates/ledger-core/src/: chain.rs  crypto.rs  lib.rs
crates/ledger-core/tests/: core_tests.rs
(+265 files in other folders)
