[workspace]
members = [
  "crates/eds",
  "crates/edgesentry-audit",
  "crates/edgesentry-bridge",
  "crates/edgesentry-inspect",
  "crates/edgesentry-ingest",
  "crates/edgesentry-compute",
  "crates/edgesentry-evaluate",
  "crates/edgesentry-profile",
  "crates/edgesentry-store",
  "crates/edgesentry-assess",
  "crates/edgesentry-explain",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.0"
repository = "https://github.com/edgesentry/edgesentry-rs"

[workspace.dependencies]
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.9"
tracing = "0.1"
tempfile = "3"
ureq = { version = "2", features = ["json"] }
