[package]
name = "audit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for signing records and verifying immutable trace integrity"

[dependencies]
clap.workspace = true
device-agent.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
ledger-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
