[package]
name = "edgesentry-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description   = "C/C++ FFI bridge — call Rust signing and verification from C without a full rewrite"
keywords      = ["ffi", "cryptography", "ed25519", "blake3", "c-bindings"]
categories    = ["cryptography", "embedded", "external-ffi-bindings", "authentication"]
documentation = "https://edgesentry.github.io/edgesentry-rs/audit/ffi_bridge/"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
edgesentry-audit = { path = "../edgesentry-audit" }
ed25519-dalek.workspace = true
rand.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
cbindgen = "0.29"
