[package]
name = "edgesentry-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Physics and geometry computations — distance, TTC, zone membership"

[dependencies]
edgesentry-types = { path = "../edgesentry-types" }
serde = { workspace = true }
serde_json = { workspace = true }
