[package]
name = "edgesentry-document"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document compliance — AI field filling, rule checking, template rendering"

[features]
default = ["llm"]
# llm: gate ureq (HTTP client for LLM calls) behind a feature so WASM builds can disable it.
# ureq pulls in rustls → ring which uses C/ASM code incompatible with wasm-bindgen.
# Disable with --no-default-features when compiling edgesentry-wasm.
llm = ["dep:ureq"]

[dependencies]
edgesentry-parse = { path = "../edgesentry-parse" }
edgesentry-evaluate = { path = "../edgesentry-evaluate" }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true, optional = true }
