[package]
name = "edgesentry-evaluate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule DSL and evaluation engine — loads rules.json and evaluates RiskEvents"

[dependencies]
edgesentry-ingest = { path = "../edgesentry-ingest" }
edgesentry-compute = { path = "../edgesentry-compute" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
