[package]
name = "edgesentry-explain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM-powered explanation layer — KB-grounded plain-language alerts"

[dependencies]
edgesentry-evaluate = { path = "../edgesentry-evaluate" }
edgesentry-ingest = { path = "../edgesentry-ingest" }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
