[package]
name = "edgesentry-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured data ingestion — CSV replay, entity stream, PLY/IFC loaders"

[dependencies]
edgesentry-types  = { path = "../edgesentry-types" }
edgesentry-compute = { path = "../edgesentry-compute" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
