[package]
name = "edgesentry-inspect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description   = "Edge-first 3D scan vs. reference deviation detection for construction and maritime inspection"
keywords      = ["inspection", "point-cloud", "deviation", "ifc", "digital-twin"]
categories    = ["science", "computer-vision", "embedded"]
documentation = "https://edgesentry.github.io/edgesentry-rs/inspect/en/"

[lib]
name = "edgesentry_inspect"
path = "src/lib.rs"

[dependencies]
trilink-core = { git = "https://github.com/edgesentry/trilink-core", branch = "main" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
kd-tree = "0.6"

[dev-dependencies]
tempfile = "3"
