[package]
name = "edgesentry-inspect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description   = "Edge-first 3D scan vs. reference deviation detection for construction and maritime inspection"
keywords      = ["inspection", "point-cloud", "deviation", "ifc", "digital-twin"]
categories    = ["science", "computer-vision", "embedded"]
documentation = "https://edgesentry.github.io/edgesentry-rs/inspect/introduction/"

[lib]
name = "edgesentry_inspect"
path = "src/lib.rs"

[[bin]]
name = "edgesentry-inspect"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
trilink-core = { git = "https://github.com/edgesentry/trilink-core.git", branch = "main" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rstar = "0.12"
glam = "0.33.0"
image = { version = "0.25", default-features = false, features = ["png"] }
toml = "1"
ureq = "2"
tempfile = "3"
tract-onnx = "0.22"

[dev-dependencies]
mockito  = "1"
tokio    = { version = "1", features = ["rt", "macros"] }
