[package]
name = "edgesentry-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Maritime structured data parsing — CSV/Parquet → DocumentEntity JSONL"

[features]
default = ["parquet-support"]
parquet-support = ["dep:parquet"]

[dependencies]
edgesentry-ingest = { path = "../edgesentry-ingest" }
edgesentry-types = { path = "../edgesentry-types" }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { version = "55", default-features = false, features = ["snap"], optional = true }
