[package]
name = "edgesentry-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Maritime structured data parsing — CSV/Parquet → DocumentEntity JSONL"

[features]
default = ["parquet-support"]
# parquet-support: gate the parquet dep behind a feature so WASM builds can disable it.
# The parquet crate pulls in `snap` which uses C bindings incompatible with wasm-bindgen.
# Disable with --no-default-features when compiling edgesentry-wasm.
parquet-support = ["dep:parquet"]

[dependencies]
edgesentry-ingest = { path = "../edgesentry-ingest" }
edgesentry-types = { path = "../edgesentry-types" }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { version = "58", default-features = false, features = ["snap"], optional = true }
