[package]
name = "edgesentry-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Report generation — Markdown safety reports from pipeline output"

[dependencies]
edgesentry-evaluate = { path = "../edgesentry-evaluate" }
edgesentry-assess = { path = "../edgesentry-assess" }
serde = { workspace = true }
serde_json = { workspace = true }
