[package]
name = "edgesentry-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description   = "Tamper-evident immutable audit trace: signing, verification, ingestion and CLI"
keywords      = ["audit", "cryptography", "ed25519", "blake3", "iot-security"]
categories    = ["cryptography", "embedded", "network-programming", "authentication"]
documentation = "https://edgesentry.github.io/edgesentry-rs/"

[[bin]]
name = "eds"
path = "src/main.rs"

[lib]
name = "edgesentry_rs"
path = "src/lib.rs"

[features]
default = []
async-ingest = [
    "dep:tokio",
]
transport-http = [
    "async-ingest",
    "dep:axum",
]
transport-tls = [
    "transport-http",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tower",
]
transport-mqtt = []
s3 = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-credential-types",
    "dep:tokio",
]
postgres = ["dep:postgres"]

[dependencies]
blake3.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum = { version = "0.8", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
hyper = { version = "1", features = ["http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "service"], optional = true }
tower = { version = "0.5", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net"], optional = true }
postgres = { version = "0.19", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
rcgen = { version = "0.13", features = ["pem"] }
