[package]
name = "edgesentry-scenario"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Synthetic scenario generation — CSV fixtures and UDP simulation"

[dependencies]
edgesentry-ingest = { path = "../edgesentry-ingest" }
serde = { workspace = true }
serde_json = { workspace = true }
