[package]
name = "eds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EdgeSentry unified CLI — eds inspect | eds audit"
keywords = ["inspection", "audit", "cli", "point-cloud", "ifc"]
categories = ["command-line-utilities"]

[[bin]]
name = "eds"
path = "src/main.rs"

[features]
default = []
# Forwarded from edgesentry-audit; enables transport server subcommands.
transport-http = ["edgesentry-audit/transport-http", "dep:tokio"]
transport-tls  = ["edgesentry-audit/transport-tls",  "dep:tokio"]
transport-mqtt = ["edgesentry-audit/transport-mqtt", "dep:tokio"]
transport-mqtt-tls = ["edgesentry-audit/transport-mqtt-tls", "dep:tokio"]
s3       = ["edgesentry-audit/s3",       "dep:tokio"]
postgres = ["edgesentry-audit/postgres"]

[dependencies]
edgesentry-audit    = { path = "../edgesentry-audit" }
edgesentry-inspect  = { path = "../edgesentry-inspect" }
edgesentry-ingest   = { path = "../edgesentry-ingest" }
edgesentry-compute  = { path = "../edgesentry-compute" }
edgesentry-evaluate = { path = "../edgesentry-evaluate" }
edgesentry-profile  = { path = "../edgesentry-profile" }
edgesentry-store    = { path = "../edgesentry-store" }
edgesentry-assess   = { path = "../edgesentry-assess" }
edgesentry-explain  = { path = "../edgesentry-explain" }
edgesentry-report   = { path = "../edgesentry-report" }
edgesentry-parse    = { path = "../edgesentry-parse" }
edgesentry-document = { path = "../edgesentry-document" }
clap          = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
ureq          = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
serde_json    = { workspace = true }
ureq          = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
edgesentry-audit = { path = "../edgesentry-audit", features = ["transport-http", "transport-tls"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
rcgen   = "0.13"
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
