[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data model, hashing, and signature verification primitives for immutable trace records"

[dependencies]
blake3.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
